--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
           <a href="https://whatsapp.com" target="_blank"
             ><i class="bi bi-whatsapp icon-size text-white"></i
           ></a>
-          <a href="https://youtube.com" target="_blank"
+          <a href="https://www.youtube.com/channel/UCAazbJm11Jb-N0nj4g05FOg" target="_blank"
             ><i class="bi bi-youtube icon-size text-white"></i
           ></a>
           <a href="https://facebook.com" target="_blank"
