--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               relacionadas a tecnologia, inovação, empreendedorismo, havendo em
               paralelo shows, apresentações, competições e premiações. O NEXT
               FIAP Festival acontecerá no espaço ARCA na Avenida Manuel
-              Bandeira, 360 em 28 de outubro – acompanhe esta experiência única
+              Bandeira, 360 em 28 de outubro – acompanhe esta experiência única.
             </h6>
           </div>
         </div>
@@ -511,7 +511,7 @@
               <div class="card-body card-size">
                 <h7 class="card-title nomes">Heloísa Santos</h7>
                 <p class="card-text mt-4">
-                  "Trabalhar juntas foi tão divertido. Todos tinham suas
+                  "Trabalhar juntos foi tão divertido. Todos tinham suas
                   habilidades e contribuíram de maneira única para o projeto.
                   Foi uma verdadeira colaboração."
                 </p>
@@ -530,7 +530,7 @@
                 <p class="card-text mt-4">
                   "Foi uma jornada desafiadora, mas com determinação e trabalho
                   em equipe, superamos todos os obstáculos que encontramos. O
-                  resultado final valeu a pena. "
+                  resultado final valeu a pena."
                 </p>
               </div>
             </div>
